@@ -3128,6 +3128,10 @@ ptp_get_property_description(PTPParams* params, uint16_t dpc)
 		 N_("Max. Aperture at Max. Focal Length")},
 		{PTP_DPC_NIKON_LowLight,
 		 N_("Low Light")},
+		{PTP_DPC_NIKON_ACPower, N_("AC Power")},
+		{PTP_DPC_NIKON_BracketingSet, N_("NIKON Auto Bracketing Set")},
+		{PTP_DPC_NIKON_WhiteBalanceBracketStep, N_("NIKON White Balance Bracket Step")},
+		{PTP_DPC_NIKON_AFLLock, N_("NIKON AF-L Locked")},
 		{0,NULL}
 	};
         struct {
@@ -3274,6 +3278,7 @@ ptp_render_property_value(PTPParams* params, uint16_t dpc,
 		{PTP_DPC_WhiteBalance, 7, N_("Flash")},
 		{PTP_DPC_WhiteBalance, 32784, N_("Cloudy")},
 		{PTP_DPC_WhiteBalance, 32785, N_("Shade")},
+		{PTP_DPC_WhiteBalance, 32786, N_("Color Temperature")},
 		{PTP_DPC_WhiteBalance, 32787, N_("Preset")},
 		{PTP_DPC_FlashMode, 32784, N_("Default")},
 		{PTP_DPC_FlashMode, 4, N_("Red-eye Reduction")},
@@ -3283,6 +3288,7 @@ ptp_render_property_value(PTPParams* params, uint16_t dpc,
 		{PTP_DPC_FocusMeteringMode, 2, N_("Dynamic Area")},
 		{PTP_DPC_FocusMeteringMode, 32784, N_("Single Area")},
 		{PTP_DPC_FocusMeteringMode, 32785, N_("Closest Subject")},
+		{PTP_DPC_FocusMeteringMode, 32786, N_("Group Dynamic")},
 		{PTP_DPC_FocusMode, 1, N_("Manual Focus")},
 		{PTP_DPC_FocusMode, 32784, "AF-S"},
 		{PTP_DPC_FocusMode, 32785, "AF-C"},
@@ -3311,8 +3317,10 @@ ptp_render_property_value(PTPParams* params, uint16_t dpc,
 		{PTP_DPC_ExposureProgramMode, 32789, N_("Night Portrait")},
 		{PTP_DPC_StillCaptureMode, 1, N_("Single Shot")},
 		{PTP_DPC_StillCaptureMode, 2, N_("Power Wind")},
+		{PTP_DPC_StillCaptureMode, 32784, N_("Continuous Low Speed")},
 		{PTP_DPC_StillCaptureMode, 32785, N_("Timer")},
 		{PTP_DPC_StillCaptureMode, 32787, N_("Remote")},
+		{PTP_DPC_StillCaptureMode, 32787, N_("Mirror Up")},
 		{PTP_DPC_StillCaptureMode, 32788, N_("Timer + Remote")},
 		PTP_VAL_BOOL(PTP_DPC_NIKON_AutofocusMode),
 		PTP_VAL_RBOOL(PTP_DPC_NIKON_AFAssist),
